# sipmpdf

./: .gitignore  README.md  pyproject.toml
docs/: sipm_functions.ipynb
src/sipmpdf/: __init__.py  functions.py  generate.py  kernel.py  pdf.py
